Misc changes for cleanup and refactor from intellij status report.